[package]
name = "Circle-menu"
version = "0.1.0"
edition = "2024"

[dependencies]
gdk = { package = "gdk4", version = "0.9.6", features = ["gl", "v4_16"] }
gio = "0.20.11"
glib = "0.20.10"
gtk4 = "0.9.6"
gtk4-layer-shell = "0.5.0"
mouse_position = "0.1.4"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
